--- a/index.html
+++ b/index.html
@@ -20,47 +20,47 @@
                 <div id = 'filter__show' class="filter__content">
                     <div class="header__filter">
                         <div class="header__genre">
-                            <span><label for="Demons">Demons</label><input type="checkbox" name="Demons" id="Demons"></span>
-                            <span><label for="Adventures">Adventures</label><input type="checkbox" name="Adventures" id="Adventures"></span>
-                            <span><label for="Furs">Furs</label><input type="checkbox" name="Furs" id="Furs"></span>
-                            <span><label for="Comedy">Comedy</label><input type="checkbox" name="Comedy" id="Comedy"></span>
-                            <span><label for="Detective">Detective</label><input type="checkbox" name="Detective" id="Detective"></span>
-                            <span><label for="Slice of life">Slice of life</label><input type="checkbox" name="Slice of life" id="Slice of life"></span>
-                            <span><label for="Supernatural">Supernatural</label><input type="checkbox" name="Supernatural" id="Supernatural"></span>
-                            <span><label for="Senen">Senen</label><input type="checkbox" name="Senen" id="Senen"></span>
-                            <span><label for="Action">Action</label><input type="checkbox" name="Action" id="Action"></span>
-                            <span><label for="Sport">Sport</label><input type="checkbox" name="Sport" id="Sport"></span>
-                            <span><label for="Harem">Harem</label><input type="checkbox" name="Harem" id="Harem"></span>
-                            <span><label for="Romance">Romance</label><input type="checkbox" name="Romance" id="Romance"></span>
-                            <span><label for="School">School</label><input type="checkbox" name="School" id="School"></span>
-                            <span><label for="Etty">Etty</label><input type="checkbox" name="Etty" id="Etty"></span>
-                            <span><label for="Psychological">Psychological</label><input type="checkbox" name="Psychological" id="Psychological"></span>
-                            <span><label for="Thriller">Thriller</label><input type="checkbox" name="Thriller" id="Thriller"></span>
-                            <span><label for="Drama">Drama</label><input type="checkbox" name="Drama" id="Drama"></span>
-                            <span><label for="Horrors">Horrors</label><input type="checkbox" name="Horrors" id="Horrors"></span>
-                            <span><label for="Magic">Magic</label><input type="checkbox" name="Magic" id="Magic"></span>
+                            <span><label for="Demons">Demons</label><input type="checkbox" name="Demons" id="Demons" onchange="filterFunction()"></span>
+                            <span><label for="Adventures">Adventures</label><input type="checkbox" name="Adventures" id="Adventures" onchange="filterFunction()"></span>
+                            <span><label for="Furs">Furs</label><input type="checkbox" name="Furs" id="Furs" onchange="filterFunction()"></span>
+                            <span><label for="Comedy">Comedy</label><input type="checkbox" name="Comedy" id="Comedy" onchange="filterFunction()"></span>
+                            <span><label for="Detective">Detective</label><input type="checkbox" name="Detective" id="Detective" onchange="filterFunction()"></span>
+                            <span><label for="Slice of life">Slice of life</label><input type="checkbox" name="Slice of life" id="Slice of life" onchange="filterFunction()"></span>
+                            <span><label for="Supernatural">Supernatural</label><input type="checkbox" name="Supernatural" id="Supernatural" onchange="filterFunction()"></span>
+                            <span><label for="Senen">Senen</label><input type="checkbox" name="Senen" id="Senen" onchange="filterFunction()"></span>
+                            <span><label for="Action">Action</label><input type="checkbox" name="Action" id="Action" onchange="filterFunction()"></span>
+                            <span><label for="Sport">Sport</label><input type="checkbox" name="Sport" id="Sport" onchange="filterFunction()"></span>
+                            <span><label for="Harem">Harem</label><input type="checkbox" name="Harem" id="Harem" onchange="filterFunction()"></span>
+                            <span><label for="Romance">Romance</label><input type="checkbox" name="Romance" id="Romance" onchange="filterFunction()"></span>
+                            <span><label for="School">School</label><input type="checkbox" name="School" id="School" onchange="filterFunction()"></span>
+                            <span><label for="Etty">Etty</label><input type="checkbox" name="Etty" id="Etty" onchange="filterFunction()"></span>
+                            <span><label for="Psychological">Psychological</label><input type="checkbox" name="Psychological" id="Psychological" onchange="filterFunction()"></span>
+                            <span><label for="Thriller">Thriller</label><input type="checkbox" name="Thriller" id="Thriller" onchange="filterFunction()"></span>
+                            <span><label for="Drama">Drama</label><input type="checkbox" name="Drama" id="Drama" onchange="filterFunction()"></span>
+                            <span><label for="Horrors">Horrors</label><input type="checkbox" name="Horrors" id="Horrors" onchange="filterFunction()"></span>
+                            <span><label for="Magic">Magic</label><input type="checkbox" name="Magic" id="Magic" onchange="filterFunction()"></span>
                         </div>
                         <div class="header__year">
-                            <span><label for="2022">2022</label><input type="checkbox" name="2022" id=2022></span>
-                            <span><label for="2021">2021</label><input type="checkbox" name="2021" id=2021></span>
-                            <span><label for="2020">2020</label><input type="checkbox" name="2020" id=2020></span>
-                            <span><label for="2019">2019</label><input type="checkbox" name="2019" id=2019></span>
-                            <span><label for="2018">2018</label><input type="checkbox" name="2022" id=2018></span>
-                            <span><label for="2017">2017</label><input type="checkbox" name="2017" id=2017></span>
-                            <span><label for="2016">2016</label><input type="checkbox" name="2016" id=2016></span>
-                            <span><label for="2015">2015</label><input type="checkbox" name="2015" id=2015></span>
-                            <span><label for="2014">2014</label><input type="checkbox" name="2014" id=2014></span>
-                            <span><label for="2013">2013</label><input type="checkbox" name="2013" id=2013></span>
-                            <span><label for="2012">2012</label><input type="checkbox" name="2012" id=2012></span>
-                            <span><label for="2011">2011</label><input type="checkbox" name="2011" id=2011></span>
-                            <span><label for="2010">2010</label><input type="checkbox" name="2010" id=2010></span>
-                            <span><label for="2009">2009</label><input type="checkbox" name="2009" id=2009></span>
-                            <span><label for="2008">2008</label><input type="checkbox" name="2008" id=2008></span>
-                            <span><label for="2007">2007</label><input type="checkbox" name="2007" id=2007></span>
-                            <span><label for="2006">2006</label><input type="checkbox" name="2006" id=2006></span>
-                            <span><label for="2005">2005</label><input type="checkbox" name="2005" id=2005></span>
-                            <span><label for="2004">2004</label><input type="checkbox" name="2004" id=2004></span>
-                            <span><label for="2003">2003</label><input type="checkbox" name="2003" id=2003></span>
+                            <span><label for="2022">2022</label><input onchange="filterFunction()" type="checkbox" name="2022" id=2022></span>
+                            <span><label for="2021">2021</label><input onchange="filterFunction()" type="checkbox" name="2021" id=2021></span>
+                            <span><label for="2020">2020</label><input onchange="filterFunction()" type="checkbox" name="2020" id=2020></span>
+                            <span><label for="2019">2019</label><input onchange="filterFunction()" type="checkbox" name="2019" id=2019></span>
+                            <span><label for="2018">2018</label><input onchange="filterFunction()" type="checkbox" name="2022" id=2018></span>
+                            <span><label for="2017">2017</label><input onchange="filterFunction()" type="checkbox" name="2017" id=2017></span>
+                            <span><label for="2016">2016</label><input onchange="filterFunction()" type="checkbox" name="2016" id=2016></span>
+                            <span><label for="2015">2015</label><input onchange="filterFunction()" type="checkbox" name="2015" id=2015></span>
+                            <span><label for="2014">2014</label><input onchange="filterFunction()" type="checkbox" name="2014" id=2014></span>
+                            <span><label for="2013">2013</label><input onchange="filterFunction()" type="checkbox" name="2013" id=2013></span>
+                            <span><label for="2012">2012</label><input onchange="filterFunction()" type="checkbox" name="2012" id=2012></span>
+                            <span><label for="2011">2011</label><input onchange="filterFunction()" type="checkbox" name="2011" id=2011></span>
+                            <span><label for="2010">2010</label><input onchange="filterFunction()" type="checkbox" name="2010" id=2010></span>
+                            <span><label for="2009">2009</label><input onchange="filterFunction()" type="checkbox" name="2009" id=2009></span>
+                            <span><label for="2008">2008</label><input onchange="filterFunction()" type="checkbox" name="2008" id=2008></span>
+                            <span><label for="2007">2007</label><input onchange="filterFunction()" type="checkbox" name="2007" id=2007></span>
+                            <span><label for="2006">2006</label><input onchange="filterFunction()" type="checkbox" name="2006" id=2006></span>
+                            <span><label for="2005">2005</label><input onchange="filterFunction()" type="checkbox" name="2005" id=2005></span>
+                            <span><label for="2004">2004</label><input onchange="filterFunction()" type="checkbox" name="2004" id=2004></span>
+                            <span><label for="2003">2003</label><input onchange="filterFunction()" type="checkbox" name="2003" id=2003></span>
 
                         </div>
                         <div class="header__rating">
@@ -96,9 +96,6 @@
                             </div>
                         </div>
                 </div>
-                    <button onclick="filterFunction()" class="filter__button">
-                        Отфильтровать
-                    </button>
             </div>
             </div>
         </header>
