--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="title" onclick="ReturnCards(animeData)">LORDFILMS</h1>
+            <div class="header__nav">
+                <div class="wrapper__img" style="visibility: hidden;"><img src="img/Arrow 4.svg" alt="" onclick="ReturnCards(animeData)"></div>
+                <h1 class="title">LORDFILMS</h1>
+                <div class="header__next">
+                </div>
+            </div>
             <div class="header__content">
                 <button onclick="filterShow()" class="filter__button">
                    Фильтры
