--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LORDFILMS</title>
+    <link rel="icon" type="image/svg+xml" href='img/optimist.png'>
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
@@ -71,6 +72,22 @@
                             <span><label for="2005">2005</label><input onchange="filterFunction()" type="checkbox" name="2005" id=2005></span>
                             <span><label for="2004">2004</label><input onchange="filterFunction()" type="checkbox" name="2004" id=2004></span>
                             <span><label for="2003">2003</label><input onchange="filterFunction()" type="checkbox" name="2003" id=2003></span>
+                            <span><label for="2002">2002</label><input onchange="filterFunction()" type="checkbox" name="2002" id=2002></span>
+                            <span><label for="2001">2001</label><input onchange="filterFunction()" type="checkbox" name="2001" id=2001></span>
+                            <span><label for="2000">2000</label><input onchange="filterFunction()" type="checkbox" name="2000" id=2000></span>
+                            <span><label for="1999">1999</label><input onchange="filterFunction()" type="checkbox" name="1999" id=1999></span>
+                            <span><label for="1998">1998</label><input onchange="filterFunction()" type="checkbox" name="1998" id=1998></span>
+                            <span><label for="1997">1997</label><input onchange="filterFunction()" type="checkbox" name="1997" id=1997></span>
+                            <span><label for="1996">1996</label><input onchange="filterFunction()" type="checkbox" name="1996" id=1996></span>
+                            <span><label for="1995">1995</label><input onchange="filterFunction()" type="checkbox" name="1995" id=1995></span>
+                            <span><label for="1994">1994</label><input onchange="filterFunction()" type="checkbox" name="1994" id=1994></span>
+                            <span><label for="1993">1993</label><input onchange="filterFunction()" type="checkbox" name="1993" id=1993></span>
+                            <span><label for="1992">1992</label><input onchange="filterFunction()" type="checkbox" name="1992" id=1992></span>
+                            <span><label for="1991">1991</label><input onchange="filterFunction()" type="checkbox" name="1991" id=1991></span>
+                            <span><label for="1990">1990</label><input onchange="filterFunction()" type="checkbox" name="1990" id=1990></span>
+                            <span><label for="1989">1989</label><input onchange="filterFunction()" type="checkbox" name="1989" id=1989></span>
+                            <span><label for="1988">1988</label><input onchange="filterFunction()" type="checkbox" name="1988" id=1988></span>
+                            <span><label for="1987">1987</label><input onchange="filterFunction()" type="checkbox" name="1987" id=1987></span>
 
                         </div>
                         <div class="header__rating">
