--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <button onclick="filterShow()" class="filter__button">Фильтры</button>
                         <button class="filter__button" onclick="reset()">Сбросить</button>
                     </div>
-                    <div class="wrapper__search">
+                    <div class="after wrapper__search">
                         <input type="text" value="" placeholder="Search" id="Search">
                     </div>
                 </div>
