--- a/page.html
+++ b/page.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LORDFILMS</title>
+    <link rel="icon" type="image/svg+xml" href='img/optimist.png'>
     <link rel="stylesheet" href="page.css">
     <script src="page.js" type="module" defer></script>
 </head>
