click on title go to index.html

--- a/page.html
+++ b/page.html
@@ -13,7 +13,7 @@
     <div class="container">
     <header class="header">
         <div class="header__nav">
-            <h1 class="title">LORDFILMS</h1>
+            <h1 class="title"><a href="index.html">LORDFILMS</a></h1>
         </div>
         </header>
         <main class="main">
